--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -40,6 +40,39 @@
 	android:layout_height="1dip"
 	android:background="#808080"/>
 
+<!-- Swappines -->
+<LinearLayout
+	android:layout_width="fill_parent"
+	android:layout_height="wrap_content">
+<TextView
+	android:id="@+id/Textswappiness"
+	android:layout_width="wrap_content"
+	android:layout_height="wrap_content"
+    android:text="@string/TVswappiness"
+	android:layout_marginLeft="4dip"
+	android:textSize="16sp"
+	android:textStyle="bold"
+	android:layout_weight="1"
+	android:layout_gravity="center_vertical"
+	android:clickable="true"/>
+<EditText
+   	android:id="@+id/swappiness"
+   	android:numeric="integer"
+   	android:maxLength="3"
+   	android:gravity="right|center_vertical"
+  	android:singleLine="true"
+   	android:layout_width="50dip"
+	android:layout_height="wrap_content"
+	android:layout_marginRight="4dip"
+	android:layout_gravity="center_vertical"/>
+</LinearLayout>
+
+<!-- Dividing line -->
+<View 
+	android:layout_width="fill_parent"
+	android:layout_height="1dip"
+	android:background="#808080"/>
+	
 <!-- Min CPU frequency -->
 <LinearLayout
 	android:layout_width="fill_parent"
@@ -501,6 +534,36 @@
 	android:gravity="center"
 	android:clickable="true"/>
 	
+<!-- Dividing line -->
+<View 
+	android:layout_width="fill_parent"		
+	android:layout_height="1dip"
+	android:background="#808080"/>
+	
+<LinearLayout
+	android:layout_width="fill_parent"
+	android:layout_height="wrap_content">
+<TextView
+	android:id="@+id/Textpresets"
+	android:layout_width="wrap_content"
+	android:layout_height="wrap_content"
+    android:text="@string/TVpresets"
+	android:layout_marginLeft="4dip"
+	android:textSize="16sp"
+	android:textStyle="bold"
+	android:layout_weight="1"
+	android:layout_gravity="center_vertical"
+	android:clickable="true"/>
+<Spinner 
+    android:id="@+id/presets"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:prompt="@string/TVpresets"
+    android:entries="@array/Spresets"
+    android:layout_marginRight="4dip"
+    android:layout_gravity="center_vertical"/>
+</LinearLayout>
+
 <!-- Dividing line -->
 <View 
 	android:layout_width="fill_parent"		
