--- a/res/values-ru/description.xml
+++ b/res/values-ru/description.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<string name="swap">Android использует Swap как дополнительную память для тех страниц памяти приложения, которые не используются активно, но запись в которые производилась. Размер Swap плюс размер оперативной памяти составляют фактический (виртуальный) размер памяти системы. Для использования данного механизма необходимо создать в режиме Recovery Swap-раздел, для чего вам понадобится внешняя карта памяти (желательно не ниже 6 класса).</string>
+	<string name="swap">Android использует Swap как дополнительную память для тех страниц памяти приложения, которые не используются активно, но запись в которые производилась. Размер Swap плюс размер оперативной памяти составляют фактический (виртуальный) размер памяти системы. Для использования данного механизма необходимо создать в режиме Recovery Swap-раздел, для чего вам понадобится внешняя карта памяти (желательно не ниже 6 класса). Compcache будет отключен.</string>
+	<string name="overclock1">Увеличение частоты процессора до 614 МГц.</string>
+	<string name="overclock2">Увеличение частоты процессора до 710 МГц. Может привести к нестабильной работе на некоторых устройствах.</string>
 	<string name="sampling">CPU Sampling - временной интервал, в течение которого устройство определяет свою нагрузку. После каждого замера частота процессора увеличивается или уменьшается в зависимости от этой нагрузки.</string>
 	<string name="sensors">Скорость реакции сенсорных датчиков.</string>
 	<string name="ssh">Позволяет запустить с вашего компьютера консоль Linux на коммуникаторе.</string>
@@ -8,15 +10,16 @@
 	<string name="provisionned">Возможность использования коммуникатора без сим-карты.</string>
 	<string name="vnc">Возможность управлять коммуникатором через компьютер (используя специализированное приложение).</string>
 	<string name="bootani">Упрощённая анимация во время загрузки системы (для ускорения процесса загрузки).</string>
-	<string name="servicemode">Сервисный режим, только для экспертов! Здесь можно произвести тонкую настройку звука (Audio Hack).</string>
-	<string name="kitchen">"Кухня приложений" - создание своего собственного пакета приложений Google.</string>
+	<string name="servicemode">Только для экспертов! Здесь можно произвести тонкую настройку звука (Audio Hack).</string>
+	<string name="kitchen">Создание своего собственного пакета приложений Google.</string>
 	<string name="memorythresholds">Пороговые значения, при которых устройство уничтожит некоторые процессы для освобождения памяти. Предварительно сделайте резервное копирование Nandroid Backup!</string>
-	<string name="foregroundapp">Приложения, работа которых в данный момент отображается на экране. Не изменяйте это значение, если у Вас нет уверенности в своих действиях!</string>
+	<string name="foregroundapp">Приложения, работу которых вы в данный момент видите на экране. Не изменяйте это значение, если у Вас нет уверенности в своих действиях!</string>
 	<string name="visibleapp">Приложения, которые работают в фоновом режиме. Не изменяйте это значение, если у Вас нет уверенности в своих действиях!</string>
-	<string name="secondaryapp">Процессы (службы, в которых нуждается приложение), которые живы и готовы в случае необходимости выполнить какие-либо действия. Не изменяйте это значение, если у Вас нет уверенности в своих действиях!</string>
-	<string name="hiddenapp">Бездействующие (но всё ещё живые) процессы, которые необходимы выполняющемуся приложению. Будьте осторожны с этой установкой!</string>
+	<string name="secondaryapp">Процессы (службы, в которых нуждается приложение), которые находятся в ожидании и готовы в случае необходимости выполнить какие-либо действия. Не изменяйте это значение, если у Вас нет уверенности в своих действиях!</string>
+	<string name="hiddenapp">Бездействующие процессы, которые необходимы выполняющемуся приложению. Будьте осторожны с этой установкой!</string>
 	<string name="contentapp">Приложения, которые предоставляют системе данные (контент) и обновляют их (например Android Market или Google Sync). Если Вы отключите их, они не смогут этого делать.</string>
 	<string name="emptyapp">Так называемые "призраки". Приложения, которые Вы запустили, но не используете. Android использует уникальный стиль управления памятью. Если приложение более не активно, вместо того, чтобы закрыть его, Android сохраняет приложение в памяти. Поэтому повторное обращение к этому приложению займёт гораздо меньше времени."Призраки" не расходуют заряд батареи или время ЦП. Они лишь занимают ту часть памяти RAM, которая в ином случае была бы пуста. Когда эта память необходима какому-либо приложению или процессу, она очищается и становится доступной для него.</string>
-	<string name="lcddensity">Понижение значения плотности LCD ведёт к зрительному увеличению экрана. Это позволяет более комфортно отображать текст и прокручивать его не так часто. Это также увеличивает интервал между ярлыками основного экрана. Последнее может быть полезным, если кто-то использует виджет со множеством значков, или в случае изменения количества столбцов ADW Launcher чтобы уместить большее количество ярлыков. Предварительно сделайте резервное копирование Nandroid Backup!</string>
+	<string name="lcddensity">Понижение значения плотности LCD ведёт к зрительному увеличению экрана. Это позволяет более комфортно отображать текст и прокручивать его не так часто. Это также увеличивает интервал между ярлыками основного экрана. Последнее может быть полезным, если кто-то использует виджет со множеством значков, или в случае изменения количества столбцов ADW Launcher чтобы уместить большее количество ярлыков. Предварительно сделайте резервное копирование Nandroid Backup! Не все приложения коректно отображаются при уменьшении данного значения.</string>
 	<string name="gallery">Использовать 2D галерею вместо 3D. 2D галерея работает быстрее, но не так красива.</string>
+	<string name="interactive">Экспериментально!</string>
 </resources>
