--- a/res/values-zh-rCN/text.xml
+++ b/res/values-zh-rCN/text.xml
@@ -1,32 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<!-- TextViews -->
-    <string name="TVswap">只使用 Swap</string>
-    <string name="TVsampling">CPU 性能</string>
-    <string name="TVsensors">传感器反应</string>
-    <string name="TVssh">SSH 服务器</string>
-    <string name="TVrenice">重调优先级</string>
-    <string name="TVprovisionned">授权</string>
-    <string name="TVvnc">VNC 服务器 (端口 5901)</string>
-    <string name="TVbootani">使用小的开机动画</string>
-    <string name="TVlcddensity">LCD Density</string>
-    <string name="TVgallery">2D gallery</string>
-    <string name="TVservicemode">打开三星服务模式</string>
-	<string name="TVkitchen">打开 GAOSP Kitchen</string>
-	<string name="TVmemorythresholds">Memory Thresholds</string>
-	<string name="TVforegroundapp">Foreground app (MB)</string>
-	<string name="TVvisibleapp">Visible app (MB)</string>
-	<string name="TVsecondaryapp">Secondary Server (MB)</string>
-	<string name="TVhiddenapp">Hidden app (MB)</string>
-	<string name="TVcontentapp">Content provider (MB)</string>
-	<string name="TVemptyapp">Empty app (MB)</string>
+    <string name="TVswap">仅启用交换空间</string>
+    <string name="TVoverclock1">超频至 614 MHz</string>
+    <string name="TVoverclock2">超频至 710 MHz</string>
+    <string name="TVsampling">处理器采用间隔</string>
+    <string name="TVsensors">传感器响应</string>
+    <string name="TVssh">SSH服务器</string>
+    <string name="TVrenice">Renice</string>
+    <string name="TVprovisionned">受限使用</string>
+    <string name="TVvnc">VNC服务器（端口5901）</string>
+    <string name="TVbootani">使用简单开机动画</string>
+    <string name="TVlcddensity">屏幕显示密度</string>
+    <string name="TVgallery">二维图库</string>
+    <string name="TVservicemode">三星服务模式</string>
+	<string name="TVkitchen">GAOSP厨房</string>
+	<string name="TVmemorythresholds">内存阈值</string>
+	<string name="TVforegroundapp">前台进程(MB)</string>
+	<string name="TVvisibleapp">后台进程(MB)</string>
+	<string name="TVsecondaryapp">服务进程(MB)</string>
+	<string name="TVhiddenapp">隐藏进程(MB)</string>
+	<string name="TVcontentapp">内容进程(MB)</string>
+	<string name="TVemptyapp">空进程(MB)</string>
+	<string name="TVinteractive">交互式处理器频率调节策略</string>
 	<!-- Buttons -->
 	<string name="Bopen">打开</string>
-    <string name="Bdefaults">设置默认值</string>
+    <string name="Bdefaults">恢复默认值</string>
     <string name="Bapply">应用新设置</string>
     <!-- Messages -->
-    <string name="wait">请稍等...</string>
-    <string name="applied">新配置已经保存并应用。你可以需要重启动。</string>
-	<string name="swapwarning">你的外置 SD 卡上必须有 SWAP 分区 (Recovery > Format swap+fat32)</string>
-	<string name="defaults">Defaults successfully loaded. Press Apply new config to save.</string>
+    <string name="wait">请稍候...</string>
+    <string name="applied">新设置已保存并应用。可能需要重启使新设置生效。</string>
+	<string name="swapwarning">必须使用具有交换空间分区的外部SD卡（恢复模式 > Format swap+fat32）</string>
+	<string name="defaults">已成功加载默认设置，请按“应用新设置”保存。</string>
+	<!-- Spinners -->
+    <string-array name="Ssampling">
+    	<item>省电</item>
+        <item>混合</item>
+        <item>性能</item>
+    </string-array>
 </resources>
