--- a/res/values-hr/description.xml
+++ b/res/values-hr/description.xml
@@ -23,3 +23,4 @@
 	<string name="gallery">Koristi galeriju u 2D-u umjesto u 3D-u. 2D galerija je brža ali ne tako elegantna.</string>
 <string name="interactive">Eksperimentalno!</string>
 </resources>
+$ git fetch upstream
