Edited res/values-hr/text.xml via GitHub

--- a/res/values-hr/text.xml
+++ b/res/values-hr/text.xml
@@ -50,7 +50,7 @@
     	<item>Multitasking</item>
         <item>Androida Zadano</item>
         <item>Umjereno</item>
-        <item>Obihoernchen-eve postavke</item>
+        <item>Obihoernchen-ova postavka</item>
         <item>GAOSP Zadano</item>
         <item>Singletasking</item>
         <item>-</item>        
