--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -61,7 +61,7 @@
    	android:maxLength="3"
    	android:gravity="right|center_vertical"
   	android:singleLine="true"
-   	android:layout_width="50dip"
+   	android:layout_width="60dip"
 	android:layout_height="wrap_content"
 	android:layout_marginRight="4dip"
 	android:layout_gravity="center_vertical"/>
@@ -226,6 +226,39 @@
 	android:layout_height="1dip"
 	android:background="#808080"/>
 
+<!-- SD Read Cache -->
+<LinearLayout
+	android:layout_width="fill_parent"
+	android:layout_height="wrap_content">
+<TextView
+	android:id="@+id/Textsdcache"
+	android:layout_width="wrap_content"
+	android:layout_height="wrap_content"
+    android:text="@string/TVsdcache"
+	android:layout_marginLeft="4dip"
+	android:textSize="16sp"
+	android:textStyle="bold"
+	android:layout_weight="1"
+	android:layout_gravity="center_vertical"
+	android:clickable="true"/>
+<EditText
+   	android:id="@+id/sdcache"
+   	android:numeric="integer"
+   	android:maxLength="4"
+   	android:gravity="right|center_vertical"
+  	android:singleLine="true"
+   	android:layout_width="90dip"
+	android:layout_height="wrap_content"
+	android:layout_marginRight="4dip"
+	android:layout_gravity="center_vertical"/>
+</LinearLayout>
+
+<!-- Dividing line -->
+<View 
+	android:layout_width="fill_parent"		
+	android:layout_height="1dip"
+	android:background="#808080"/>
+	
 <!-- SSH Server -->
 <LinearLayout
 	android:layout_width="fill_parent"
@@ -392,7 +425,7 @@
    	android:maxLength="3"
    	android:gravity="right|center_vertical"
   	android:singleLine="true"
-   	android:layout_width="50dip"
+   	android:layout_width="80dip"
 	android:layout_height="wrap_content"
 	android:layout_marginRight="4dip"
 	android:layout_gravity="center_vertical"/>
@@ -590,7 +623,7 @@
    	android:maxLength="2"
    	android:gravity="right|center_vertical"
   	android:singleLine="true"
-   	android:layout_width="40dip"
+   	android:layout_width="60dip"
 	android:layout_height="wrap_content"
 	android:layout_marginRight="4dip"
 	android:layout_gravity="center_vertical"/>
@@ -622,7 +655,7 @@
    	android:maxLength="2"
    	android:gravity="right|center_vertical"
   	android:singleLine="true"
-   	android:layout_width="40dip"
+   	android:layout_width="60dip"
 	android:layout_height="wrap_content"
 	android:layout_marginRight="4dip"
 	android:layout_gravity="center_vertical"/>
@@ -654,7 +687,7 @@
    	android:maxLength="2"
    	android:gravity="right|center_vertical"
   	android:singleLine="true"
-   	android:layout_width="40dip"
+   	android:layout_width="60dip"
 	android:layout_height="wrap_content"
 	android:layout_marginRight="4dip"
 	android:layout_gravity="center_vertical"/>
@@ -686,7 +719,7 @@
    	android:maxLength="2"
    	android:gravity="right|center_vertical"
   	android:singleLine="true"
-   	android:layout_width="40dip"
+   	android:layout_width="60dip"
 	android:layout_height="wrap_content"
 	android:layout_marginRight="4dip"
 	android:layout_gravity="center_vertical"/>
@@ -718,7 +751,7 @@
    	android:maxLength="2"
    	android:gravity="right|center_vertical"
   	android:singleLine="true"
-   	android:layout_width="40dip"
+   	android:layout_width="60dip"
 	android:layout_height="wrap_content"
 	android:layout_marginRight="4dip"
 	android:layout_gravity="center_vertical"/>
@@ -750,7 +783,7 @@
    	android:maxLength="2"
    	android:gravity="right|center_vertical"
   	android:singleLine="true"
-   	android:layout_width="40dip"
+   	android:layout_width="60dip"
 	android:layout_height="wrap_content"
 	android:layout_marginRight="4dip"
 	android:layout_gravity="center_vertical"/>
