--- a/res/values/text.xml
+++ b/res/values/text.xml
@@ -2,7 +2,6 @@
 <resources>
 	<!-- TextViews -->
     <string name="TVswap">Swap only</string>
-    <string name="TVsampling">CPU sampling</string>
     <string name="TVsensors">Sensors reaction</string>
     <string name="TVssh">SSH server</string>
     <string name="TVrenice">Renice</string>
@@ -20,9 +19,6 @@
 	<string name="TVhiddenapp">Hidden app (MB)</string>
 	<string name="TVcontentapp">Content provider (MB)</string>
 	<string name="TVemptyapp">Empty app (MB)</string>
-	<string name="TVinteractive">Interactive cpufreq governor</string>
-	<string name="TVminfreq">Min CPU frequency</string>
-	<string name="TVmaxfreq">Max CPU frequency</string>
 	<string name="TVcompcalibration">Calibrate Compass</string>
 	<string name="TVpresets">Presets</string>
 	<string name="TVswappiness">Swappiness</string>
@@ -36,11 +32,7 @@
     <string name="applied">New config saved and applied. You may have to restart.</string>
 	<string name="swapwarning">You must have a ext SD with a swap partition (Recovery > Format swap+fat32)</string>
 	<string name="defaults">Defaults successfully loaded. Press Apply new config to save.</string>
-	<string name="ocwarning">Values between 528 and 700 are dangerous. Values over 700 are VERY DANGEROUS and will not work for everybody! You can damage your device!</string>
-	<string name="accept">Accept</string>
-	<string name="decline">Decline</string>
-	<string name="compcalibrationdialog1">You are now in calibration mode, use any compass application and rotate your device around each of its 3 axes until it points North in the right direction. Once calibrated, put device on sleep to save and return to regular mode.</string>
-	<string name="startup">Click on the text of each setting to get a description or to activate it!</string>
+	<string name="startup">Click on the text of each setting to get a description!</string>
 	<!-- Spinners -->
     <string-array name="Ssampling">
     	<item>Battery</item>
@@ -52,29 +44,8 @@
         <item>Android Default</item>
         <item>Moderate</item>
         <item>Obihoernchen´s setting</item>
-        <item>GAOSP Default</item>
-        <item>Singletasking</item>
+        <item>Gingerbread Default</item>
+        <item>Froyo Default</item>
         <item>-</item>        
-    </string-array>
-    <string-array name="Scpufreq">
-        <item>19.2 MHz</item>
-        <item>120.0 MHz</item>
-        <item>122.88 MHz</item>
-        <item>176.0 MHz</item>
-		<item>245.76 MHz</item>
-		<item>320.0 MHz</item>
-      	<item>352.0 MHz</item>
-      	<item>480.0 MHz</item>
-  		<item>528.0 MHz</item>
-     	<item>576.0 MHz</item>
-        <item>624.0 MHz</item>
-      	<item>672.0 MHz</item>
-  		<item>720.0 MHz</item>
-  		<item>748.8 MHz</item>
-   		<item>758.4 MHz</item>
-   		<item>768.0 MHz</item>
-   		<item>777.6 MHz</item>
-   		<item>787.2 MHz</item>
-   		<item>796.8 MHz</item>
     </string-array>
 </resources>
