--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -42,7 +42,8 @@
 
 <!-- Swappiness -->
 <LinearLayout
-	android:layout_height="wrap_content" android:layout_width="match_parent">
+	android:layout_width="fill_parent"
+	android:layout_height="wrap_content">
 <TextView
 	android:id="@+id/Textswappiness"
 	android:layout_width="wrap_content"
