--- a/res/values/text.xml
+++ b/res/values/text.xml
@@ -2,6 +2,7 @@
 <resources>
 	<!-- TextViews -->
     <string name="TVswap">Swap only</string>
+    <string name="TVsampling">CPU sampling</string>
     <string name="TVsensors">Sensors reaction</string>
     <string name="TVssh">SSH server</string>
     <string name="TVrenice">Renice</string>
