Added "clear cache" setting, removed kitchen link

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -404,36 +404,6 @@ android:background="#808080"/>
 	android:layout_height="1dip"
 	android:background="#808080"/>
 
-<!-- Kitchen -->
-<LinearLayout
-	android:layout_width="fill_parent"
-	android:layout_height="wrap_content">
-<TextView
-	android:id="@+id/Textkitchen"
-	android:layout_width="wrap_content"
-	android:layout_height="wrap_content"
-    android:text="@string/TVkitchen"
-	android:layout_marginLeft="4dip"
-	android:textSize="16sp"
-	android:textStyle="bold"
-	android:layout_weight="1"
-	android:layout_gravity="center_vertical"
-	android:clickable="true"/>
-<Button
-	android:id="@+id/kitchen"
-    android:text="@string/Bopen"
-	android:layout_width="wrap_content"
-	android:layout_height="wrap_content"
-	android:layout_marginRight="4dip"
-	android:layout_gravity="center_vertical"/>
-</LinearLayout>
-
-<!-- Dividing line -->
-<View 
-	android:layout_width="fill_parent"		
-	android:layout_height="1dip"
-	android:background="#808080"/>
-
 <!-- GMail -->
 <LinearLayout
 	android:layout_width="fill_parent"
@@ -452,6 +422,36 @@ android:background="#808080"/>
 <Button
 	android:id="@+id/gmailset"
     android:text="@string/Bgmailset"
+	android:layout_width="wrap_content"
+	android:layout_height="wrap_content"
+	android:layout_marginRight="4dip"
+	android:layout_gravity="center_vertical"/>
+</LinearLayout>
+
+<!-- Dividing line -->
+<View 
+	android:layout_width="fill_parent"		
+	android:layout_height="1dip"
+	android:background="#808080"/>
+
+<!-- Clear Cache -->
+<LinearLayout
+	android:layout_width="fill_parent"
+	android:layout_height="wrap_content">
+<TextView
+	android:id="@+id/Textclearcache"
+	android:layout_width="wrap_content"
+	android:layout_height="wrap_content"
+    android:text="@string/TVclearcache"
+	android:layout_marginLeft="4dip"
+	android:textSize="16sp"
+	android:textStyle="bold"
+	android:layout_weight="1"
+	android:layout_gravity="center_vertical"
+	android:clickable="true"/>
+<Button
+	android:id="@+id/clearcache"
+    android:text="@string/Bapply"
 	android:layout_width="wrap_content"
 	android:layout_height="wrap_content"
 	android:layout_marginRight="4dip"
