--- a/res/values/text.xml
+++ b/res/values/text.xml
@@ -23,11 +23,12 @@
 	<string name="TVsdcache">SD read cache</string>
 	<string name="TVgmail">GMail</string>
 	<string name="TVclearcache">Clear Cache</string>
+	<string name="TVwifi">Wifi scan interval</string>
 	<!-- Buttons -->
     <string name="Bdefaults">Set defaults</string>
     <string name="Bapply">Apply new config</string>
     <!-- Messages -->
-    <string name="wait">Please wait..</string>
+    <string name="wait">Please wait...</string>
     <string name="applied">New config saved and applied. You may have to restart.</string>
 	<string name="swapwarning">You must have a ext SD with a swap partition (Recovery > Format swap+fat32)</string>
 	<string name="defaults">Defaults successfully loaded. Press Apply new config to save.</string>
