A lot of optimizations. Thanks desotroyah

--- a/res/values/text.xml
+++ b/res/values/text.xml
@@ -28,6 +28,7 @@
     <string name="Bdefaults">Set defaults</string>
     <string name="Bapply">Apply new config</string>
     <!-- Messages -->
+    <string name="waittitle">Progressing</string>
     <string name="wait">Please wait...</string>
     <string name="applied">New config saved and applied. You may have to restart.</string>
 	<string name="swapwarning">You must have a ext SD with a swap partition (Recovery > Format swap+fat32)</string>
