--- a/res/values/text.xml
+++ b/res/values/text.xml
@@ -31,8 +31,9 @@
     <string name="waittitle">Progressing</string>
     <string name="wait">Please wait...</string>
     <string name="applied">New config saved and applied. You may have to restart.</string>
-	<string name="swapwarning">You must have a ext SD with a swap partition (Recovery > Format swap+fat32)</string>
+	<string name="swapwarning">You must have an external SD card with a swap partition (Recovery > Format swap+fat32)</string>
 	<string name="defaults">Defaults successfully loaded. Press Apply new config to save.</string>
+	<string name="done">Done</string>
 	<!-- Menu -->
 	<string name="about">About</string>
 	<string name="exit">Exit</string>
