Added clear cache widget which will improve the performance.

--- a/res/values/description.xml
+++ b/res/values/description.xml
@@ -23,4 +23,5 @@
 	<string name="gmail">In Germany you can not download GMail app. Press apply to bypass this restriction. Search for "Google Mail".</string>
 	<string name="clearcache">Tells kernel to drop caches and your device will be snappy again. Should be applied once a day if you do not reboot your device.</string>
 	<string name="wifi">Time between Wifi scan intervals (s)</string>
+	<string name="updateinterval">This widget will clear cache every 5 hours. Useful if you use swap because it clears everything and speeds up your Galaxy. You can also click on the widget to do this manually.</string>
 </resources>
