--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -6,7 +6,7 @@
 		<EditTextPreference android:summary="@string/swappiness" android:key="Swappiness" android:title="@string/TVswappiness" android:dependency="Swap" android:numeric="integer" android:singleLine="true" android:maxLength="3"></EditTextPreference>
 		<PreferenceScreen android:key="Memorythresholds" android:title="@string/TVmemorythresholds" android:summary="@string/memorythresholds">
 			<ListPreference android:summary="@string/presets" android:key="Presets" android:entries="@array/Spresets" android:title="@string/TVpresets" android:entryValues="@array/Spresetsvalue"></ListPreference>
-			<EditTextPreference android:summary="@string/foregroundapp" android:title="@string/TVforegroundapp" android:key="Mem1" android:singleLine="true" android:numeric="integer" android:maxLength="2"></EditTextPreference>
+			<EditTextPreference android:summary="@string/foregroundapp" android:title="@string/TVforegroundapp" android:key="Mem1" android:numeric="integer" android:maxLength="2" android:singleLine="true"></EditTextPreference>
 			<EditTextPreference android:summary="@string/visibleapp" android:title="@string/TVvisibleapp" android:key="Mem2" android:singleLine="true" android:numeric="integer" android:maxLength="2"></EditTextPreference>
 			<EditTextPreference android:summary="@string/secondaryapp" android:title="@string/TVsecondaryapp" android:key="Mem3" android:singleLine="true" android:numeric="integer" android:maxLength="2"></EditTextPreference>
 			<EditTextPreference android:summary="@string/hiddenapp" android:title="@string/TVhiddenapp" android:key="Mem4" android:numeric="integer" android:maxLength="2" android:singleLine="true"></EditTextPreference>
@@ -20,17 +20,30 @@
 	</PreferenceCategory>
 	
 	<PreferenceCategory android:title="Appearance">
-		<EditTextPreference android:summary="@string/lcddensity" android:key="LCD Density" android:title="@string/TVlcddensity" android:singleLine="true" android:numeric="integer" android:maxLength="3"></EditTextPreference>
+		<EditTextPreference android:summary="@string/lcddensity" android:key="LCD Density" android:title="@string/TVlcddensity" android:numeric="integer" android:maxLength="3" android:singleLine="true"></EditTextPreference>
 		<CheckBoxPreference android:title="@string/TVbootani" android:key="Bootanimation" android:summary="@string/bootani"></CheckBoxPreference>
 	</PreferenceCategory>
 	
 	<PreferenceCategory android:title="Misc">
+		<PreferenceScreen android:summary="@string/systemapps" android:title="@string/TVsystemapps" android:key="Systemapps">
+			<Preference android:title="FOTAKill.apk" android:key="FOTAKill" android:summary="@string/fotakill"></Preference>
+			<Preference android:title="TtsService.apk" android:key="TtsService"></Preference>
+			<Preference android:title="PicoTts.apk" android:key="PicoTts"></Preference>
+			<Preference android:title="DSPManager.apk" android:key="DSPManager"></Preference>
+			<Preference android:key="Development" android:title="Development.apk"></Preference>
+			<Preference android:title="VoiceDialer.apk" android:key="VoiceDialer"></Preference>
+			<Preference android:title="QuickSearchBox.apk" android:key="QuickSearchBox"></Preference>
+			<Preference android:title="Email.apk" android:key="Email"></Preference>
+			<Preference android:title="GenieWidget.apk" android:key="GenieWidget"></Preference>
+			<Preference android:title="CustomLocale.apk" android:key="CustomLocale"></Preference>
+		</PreferenceScreen>
 		<CheckBoxPreference android:title="@string/TVprovisionned" android:key="Provisionned" android:summary="@string/provisionned"></CheckBoxPreference>
 		<CheckBoxPreference android:title="@string/TVssh" android:key="SSH Server" android:summary="@string/ssh"></CheckBoxPreference>
 		<CheckBoxPreference android:title="@string/TVvnc" android:key="VNC" android:summary="@string/vnc"></CheckBoxPreference>
 		<EditTextPreference android:summary="@string/wifi" android:key="Wifi Scan" android:title="@string/TVwifi" android:numeric="integer" android:maxLength="4" android:singleLine="true"></EditTextPreference>
 		<Preference android:summary="@string/compcalibration" android:title="@string/TVcompcalibration" android:key="GPS Calibration"></Preference>
 		<Preference android:summary="@string/servicemode" android:title="@string/TVservicemode" android:key="Servicemode"></Preference>
-		<Preference android:summary="@string/gmail" android:title="@string/TVgmail" android:key="Gmail"></Preference>	
+		<Preference android:summary="@string/gmail" android:title="@string/TVgmail" android:key="Gmail"></Preference>
+			
 	</PreferenceCategory>
 </PreferenceScreen>
